# tutorials

./: .gitignore  CMakeLists.txt
sample-gif/: decoder.cc  decoder.hh  encoder.hh  sample.cc
sample-opengl/: main.cc  shaders.hh
sample-opengl/shaders/: fragment  vertex
